# samplestack

./: .gitignore  .user.yml  Dockerfile  README.md  dbt_project.yml  docker-compose.yml  packages.yml  profiles.yml  pyproject.toml
dbt/models/: sources.yml
documentation/: DWH_Entwicklungsleitfaden.md  DWH_Infrastruktur_Konfiguration.md  DWH_Quellsysteme_Schnittstellen.md
dvb/: version.json
iac/: docker-compose.dvb.yml
iac/azure/: dwh.tf  initstorage.cmd
iac/azuretf/: storage.sh
iac/k8s/: api-deploy.yaml  connection_pool-deploy.yaml  core-deploy.yaml  exa-stateful.yaml  init_dvb_exa  initialize.cmd  scheduler-deploy.yaml  secrets.yaml  start.sh  start_dev  start_dev.cmd  stop.sh  superset-deploy.yaml  webgui-deploy.yaml
iac/services/: init_env.sh
models/: sources.yml
models/businessrule/: component_metric_names.sql  component_metrics.sql  rules.yml  tcase_pro_creq.sql  testrule.sql
models/staging/: component_metric.sql  metric_name.sql  xml_metric.sql
models/supernova/: component.sql
qstat_datamart/: requirements.txt  setup.md
qstat_datamart/dbt_qstat/: README.md  dbt_project.yml
qstat_datamart/docs/: implementations.md
script/: bootstrap.ddl  component.sql  convert.py  delivery.sql  file_converter.py  metric.sql  release.sql  stack-create.sh  stack-delete.sh  view.sql  xmlparse.sql
script/events/: 1503078_Description.json  1503078_DocTechref.json  1503078_Generator.json  1503078_impl.json  1503078_make.json  1503078_root.json  3239542_Make.json  3673632_Description.json  3673632_DocTechref.json  3673632_TscStandard.json  3673632_impl.json  (+6 more)
(+393 files in other folders)
