[tool.poetry]
name = "samplestack"
version = "0.1.0"
description = "Sample stack with superset, ldap, datavault builder and exasol on linode cloud"
authors = ["torsten <torsten@glunde.de>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
